package featureful;

message A {
  message Sub {
    enum Payloads {
      P1 = 0;
      P2 = 1;
    };

    optional string payload = 1;
    required Payloads payload_type = 2 [default = P1];

    message SubSub {
      optional string subsub_payload = 1;
    };
    optional SubSub subsub1 = 3;
  };

  repeated int32 i1 = 1;
  optional int32 i2 = 2;
  required int32 i3 = 3;

  repeated Sub sub1 = 4;
  optional Sub sub2 = 5;
  required Sub sub3 = 6;
};

message B {
  repeated A a = 1;
};

enum MainPayloads {
  P1 = 2;
  P2 = 3;
  P3 = 4;
};

message ABitOfEverything {
  optional double double_field = 1;
  optional float float_field = 2;
  optional int32 int32_field = 3;
  optional int64 int64_field = 4 [default = 15];
  optional uint32 uint32_field = 5;
  optional uint64 uint64_field = 6;
  optional sint32 sint32_field = 7;
  optional sint64 sint64_field = 8;
  optional fixed32 fixed32_field = 9;
  optional fixed64 fixed64_field = 10;
  optional sfixed32 sfixed32_field = 11;
  optional sfixed64 sfixed64_field = 12;
  optional bool bool_field = 13 [default = false];
  optional string string_field = 14 [default = "zomgkittenz"];
  optional bytes bytes_field = 15;
};
